No cycle and interval replaced with %20